Instnace global tick events