@@ -19,6 +19,8 @@ import net.minestom.server.entity.metadata.animal.tameable.WolfVariant;
 import net.minestom.server.entity.metadata.other.PaintingVariant;
 import net.minestom.server.event.EventDispatcher;
 import net.minestom.server.event.GlobalEventHandler;
+import net.minestom.server.event.instance.InstanceGlobalEndTickEvent;
+import net.minestom.server.event.instance.InstanceGlobalStartTickEvent;
 import net.minestom.server.event.server.ServerTickMonitorEvent;
 import net.minestom.server.exception.ExceptionManager;
 import net.minestom.server.gamedata.tags.TagManager;
@@ -116,7 +118,7 @@ final class ServerProcessImpl implements ServerProcess {
     private final AtomicBoolean started = new AtomicBoolean();
     private final AtomicBoolean stopped = new AtomicBoolean();
 
-    private final ExecutorService instanceTicker = Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+    private final ExecutorService instanceTicker = Executors.newCachedThreadPool(Thread.ofPlatform()
             .name("InstanceTicker")
             .factory()
     );
@@ -456,6 +458,7 @@ final class ServerProcessImpl implements ServerProcess {
             for (Instance instance : instances) {
                 instanceTicker.execute(() -> {
                     try {
+                        eventHandler.call(new InstanceGlobalStartTickEvent(instance, tickStart));
                         Set<@NotNull Player> players = instance.getPlayers();
 
                         for (Player player : players) {
@@ -479,6 +482,8 @@ final class ServerProcessImpl implements ServerProcess {
                                 exception().handleException(e);
                             }
                         }
+
+                        eventHandler.call(new InstanceGlobalEndTickEvent(instance, tickStart));
                     } finally {
                         launchLatch.countDown();
                     }
